--- a/css/still.css
+++ b/css/still.css
@@ -37,6 +37,7 @@ body, html {
     color: #1C2331;
 }
 #content {
+    margin-top:10%;
     text-align:center;
     text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
                  0px, 8px, 13px rgba(0,0,0,0.1),
